--- a/apps/web/templates/books/new.html.erb
+++ b/apps/web/templates/books/new.html.erb
@@ -10,7 +10,7 @@
   </div>
 <% end %>
 <%=
-  form_for :book, '/books' do
+  form_for :book, routes.books_path do
     div class: 'input' do
       label      :title
       text_field :title
